# genai-mcp-app

./: .gitignore  readme.md
rag_server/: main.py  mcp_client.py  mcp_server.py  pyproject.toml
server/: db_conn.py  financial_statements.db  main.py  pyproject.toml  repository.py  seeder.py
server/dtos/: financial_report_dto.py
