[project]
name = "rag-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gtts>=2.5.4",
    "mcp>=1.6.0",
    "playsound==1.2.2",
    "pyaudio>=0.2.14",
    "pydantic>=2.11.3",
    "pydantic-ai>=0.1.3",
    "pyttsx3>=2.98",
    "requests>=2.32.3",
    "speechrecognition>=3.14.2",
]
